--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -15,9 +15,13 @@
 					x-document-mgr-add-folder x-project="project"
 					x-root="documentMgr.rootNode"
 					x-node="documentMgr.selectedNode"><span class="glyphicon glyphicon-folder-close"></span></button>
-			<button class="btn icon-btn" title="Show Details"><span class="glyphicon glyphicon-open"></span></button>
+
+			<button class="btn icon-btn"
+				x-document-mgr-upload-modal
+				title="Upload Files"><span class="glyphicon glyphicon-open"></span></button>
+
 			<button class="toggle-details-btn btn icon-btn" title="Show Details"
-					ng-click="fbToggleDetails()"><span class="glyphicon glyphicon-info-sign"></span></button>
+				ng-click="fbToggleDetails()"><span class="glyphicon glyphicon-info-sign"></span></button>
 		</div>
 	</div>
 
