ESM-665: fix tags to initialize upload modal correctly

--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -12,12 +12,17 @@
 		<div class="file-batch-actions">
 			<button class="btn icon-btn" title="Add New Folder"
 					ng-disabled="!documentMgr.selectedNode"
-					x-document-mgr-add-folder x-project="project"
+					x-document-mgr-add-folder
+					x-project="project"
 					x-root="documentMgr.rootNode"
 					x-node="documentMgr.selectedNode"><span class="glyphicon glyphicon-folder-close"></span></button>
 
 			<button class="btn icon-btn"
 				x-document-mgr-upload-modal
+				x-project="project"
+				x-root="documentMgr.rootNode"
+				x-node="documentMgr.selectedNode"
+				x-type="'project'"
 				title="Upload Files"><span class="glyphicon glyphicon-open"></span></button>
 
 			<button class="toggle-details-btn btn icon-btn" title="Show Details"
