--- a/modules/documents/client/views/document-manager-upload.html
+++ b/modules/documents/client/views/document-manager-upload.html
@@ -37,6 +37,22 @@
 							</div>
 						</span>
 					</li>
+					<li>
+						<span class="cell-contents">							
+							<span class="col name-col">
+								<span class="avatar">
+									<span class="fb-file glyphicon glyphicon-file"></span>
+								</span>
+								File Name
+							</span>
+							<div class="row-actions">
+								<button class="btn icon-btn"
+									ng-click="documentMgrUpload.removeFile(f)">
+									<span class="glyphicon glyphicon-trash"></span>
+								</button>
+							</div>
+						</span>
+					</li>
 				</ul>
 			</div>
 		</div>
