--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -12,7 +12,8 @@
 		<div class="file-batch-actions">
 			<button class="btn icon-btn" title="Add New Folder"
 					ng-disabled="!documentMgr.selectedNode"
-					x-document-mgr-add-folder x-project="project"
+					x-document-mgr-add-folder 
+					x-project="project"
 					x-root="documentMgr.rootNode"
 					x-node="documentMgr.selectedNode"><span class="glyphicon glyphicon-folder-close"></span></button>
 
