ESM-665: move uploader logic to service, share amongst controllers/directives.  enhance with counts and flags to button enable.

--- a/modules/documents/client/views/document-manager-upload-modal.html
+++ b/modules/documents/client/views/document-manager-upload-modal.html
@@ -1,9 +1,9 @@
 
 <div class="modal-header">
-	<button ng-disabled="uploadModal.uploading" type="button" class="btn btn-default close" ng-click="uploadModal.cancel()">
+	<button ng-disabled="uploadService.actions.busy" type="button" class="btn btn-default close" ng-click="uploadModal.cancel()">
 		<span aria-hidden="true">&times;</span>
 	</button>
-	<h3 class="modal-title">Upload Documents</h3>
+	<h3 class="modal-title">{{uploadModal.title}}</h3>
 </div>
 
 <div class="modal-body">
@@ -14,13 +14,30 @@
 		x-type="uploadModal.type"></x-document-mgr-upload>
 </div>
 
+<div>
+	Busy?: {{uploadService.actions.busy}}<br>
+	Allow Upload: {{uploadService.actions.allowStart}}<br>
+	Allow Stop: {{uploadService.actions.allowStop}}<br>
+	Allow Reset: {{uploadService.actions.allowReset}}<br>
+
+	Total files in list: {{uploadService.counts.total}}<br>
+	Upload In Progress: {{uploadService.counts.uploading}}<br>
+	Upload Completed: {{uploadService.counts.uploaded}}<br>
+	Upload Failed: {{uploadService.counts.failed}}<br>
+	Upload cancelled: {{uploadService.counts.cancelled}}<br>
+
+</div>
 <div class="modal-footer">
-	<button ng-if="uploadModal.uploading" class="btn btn-default" ng-click="uploadModal.cancelUploads()" type="button">Cancel</button>
-	<button ng-if="!uploadModal.uploading" class="btn btn-default" type="button" ng-click="uploadModal.cancel()">Cancel</button>
+	<button ng-if="!uploadService.actions.busy" class="btn btn-default" type="button" ng-click="uploadModal.cancel()">Close</button>
+	<button ng-if="uploadService.actions.allowStop" class="btn btn-default" ng-click="uploadService.stopUploads()" type="button">Stop Uploads</button>
 	<button
-		ng-if="!uploadModal.uploading"
-		ng-disabled="!uploadModal.enableUpload"
+		ng-if="uploadService.actions.allowReset"
+		class="btn"
+		type="button"
+		ng-click="uploadService.reset()">Clear Files</button>
+	<button
+		ng-if="uploadService.actions.allowStart"
 		class="btn btn-primary"
 		type="button"
-		ng-click="uploadModel.uploading || uploadModal.startUploads()">Start Upload</button>
+		ng-click="uploadService.actions.busy || uploadModal.startUploads()">Start Uploads</button>
 </div>
