ESM-665 Documents UI - Upload Files Interface

--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -611,6 +611,7 @@ $fb-upload-target-border: 2px dashed #BBB;
     height: $fb-upload-target-height;
     background: $fb-upload-target-bg;
     text-align: center;
+    opacity: 0.5;
 }
 
 .fb-upload-target {
